# ffmpeg

./: .gitignore  .gitlab-ci.yml  README.meson  depgraph.py  find_things.py  find_things_extern.py  meson.build  meson_options.txt  parse_sources.py  recursive_selects.py
compat/windows/: makedef.py
ffbuild/: bin2c.py
fftools/: meson.build
libavcodec/: meson.build
libavcodec/aac/: meson.build
libavcodec/aarch64/: meson.build
libavcodec/aarch64/vvc/: meson.build
libavcodec/arm/: meson.build
libavcodec/bsf/: meson.build
libavcodec/hevc/: meson.build
libavcodec/neon/: meson.build
libavcodec/opus/: meson.build
libavcodec/vvc/: meson.build
libavcodec/x86/: meson.build
libavcodec/x86/vvc/: meson.build
libavdevice/: meson.build
libavfilter/: meson.build  textutils.c
libavfilter/aarch64/: meson.build
libavfilter/dnn/: meson.build
libavfilter/x86/: meson.build
libavformat/: Makefile  meson.build
libavutil/: meson.build
libavutil/aarch64/: meson.build
libavutil/arm/: meson.build
libavutil/x86/: meson.build
libpostproc/: meson.build
libswresample/: meson.build
libswresample/aarch64/: meson.build
libswresample/arm/: meson.build
libswresample/x86/: meson.build
libswscale/: meson.build
libswscale/aarch64/: meson.build
libswscale/arm/: meson.build
libswscale/x86/: meson.build
subprojects/: nasm.wrap
