libavcodec_bsf_optional_sources = {
  'aac_adtstoasc_bsf' : files('aac_adtstoasc.c'),
  'av1_frame_merge_bsf' : files('av1_frame_merge.c'),
  'av1_frame_split_bsf' : files('av1_frame_split.c'),
  'av1_metadata_bsf' : files('av1_metadata.c'),
  'chomp_bsf' : files('chomp.c'),
  'dca_core_bsf' : files('dca_core.c'),
  'dovi_rpu_bsf' : files('dovi_rpu.c'),
  'dts2pts_bsf' : files('dts2pts.c'),
  'dump_extradata_bsf' : files('dump_extradata.c'),
  'dv_error_marker_bsf' : files('dv_error_marker.c'),
  'eac3_core_bsf' : files('eac3_core.c'),
  'evc_frame_merge_bsf' : files('evc_frame_merge.c'),
  'extract_extradata_bsf' : files('extract_extradata.c'),
  'filter_units_bsf' : files('filter_units.c'),
  'h264_metadata_bsf' : files('h264_metadata.c'),
  'h264_mp4toannexb_bsf' : files('h264_mp4toannexb.c'),
  'h264_redundant_pps_bsf' : files('h264_redundant_pps.c'),
  'hapqa_extract_bsf' : files('hapqa_extract.c'),
  'hevc_metadata_bsf' : files('h265_metadata.c'),
  'hevc_mp4toannexb_bsf' : files('hevc_mp4toannexb.c'),
  'imx_dump_header_bsf' : files('imx_dump_header.c'),
  'media100_to_mjpegb_bsf' : files('media100_to_mjpegb.c'),
  'mjpeg2jpeg_bsf' : files('mjpeg2jpeg.c'),
  'mjpega_dump_header_bsf' : files('mjpega_dump_header.c'),
  'mov2textsub_bsf' : files('movsub.c'),
  'mpeg2_metadata_bsf' : files('mpeg2_metadata.c'),
  'mpeg4_unpack_bframes_bsf' : files('mpeg4_unpack_bframes.c'),
  'noise_bsf' : files('noise.c'),
  'null_bsf' : files('null.c'),
  'opus_metadata_bsf' : files('opus_metadata.c'),
  'pcm_rechunk_bsf' : files('pcm_rechunk.c'),
  'pgs_frame_merge_bsf' : files('pgs_frame_merge.c'),
  'prores_metadata_bsf' : files('prores_metadata.c'),
  'remove_extradata_bsf' : files('remove_extradata.c'),
  'setts_bsf' : files('setts.c'),
  'showinfo_bsf' : files('showinfo.c'),
  'text2movsub_bsf' : files('movsub.c'),
  'trace_headers_bsf' : files('trace_headers.c'),
  'truehd_core_bsf' : files('truehd_core.c'),
  'vp9_metadata_bsf' : files('vp9_metadata.c'),
  'vp9_raw_reorder_bsf' : files('vp9_raw_reorder.c'),
  'vp9_superframe_bsf' : files('vp9_superframe.c'),
  'vp9_superframe_split_bsf' : files('vp9_superframe_split.c'),
  'vvc_metadata_bsf' : files('h266_metadata.c'),
  'vvc_mp4toannexb_bsf' : files('vvc_mp4toannexb.c'),
}

